--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "ghost-docs",
   "title": "Ghost - Docs Search",
   "description": "Search Ghost help center, developer docs, tutorials, changelog, and publisher resources",
-  "icon": "icon.png",
+  "icon": "ghost.png",
   "author": "ryan_feigenbaum",
   "owner": "ghst",
   "categories": [
@@ -16,7 +16,8 @@
       "title": "Search Docs",
       "subtitle": "Ghost",
       "description": "Search Ghost help center, developer docs, tutorials, changelog, and publisher resources",
-      "mode": "view"
+      "mode": "view",
+      "icon": "icon.png"
     }
   ],
   "dependencies": {
